--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>Hei, verden! 🌍</h1>
-    <p>Denne siden er hostet på GitHub Pages.</p>
+    <h1>Top Rope Solo 🌍</h1>
+    <p>Place around Tromso, Norway to Top Rope Solo</p>
 </body>
 </html>
