--- a/index.html
+++ b/index.html
@@ -1,24 +1,96 @@
 <!DOCTYPE html>
 <html lang="no">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Min første GitHub-side</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Top Rope Solo – Tromsø</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             background-color: #f0f4f8;
             color: #333;
             text-align: center;
-            padding-top: 100px;
+            padding: 40px 20px;
+            margin: 0;
         }
         h1 {
             color: #0066cc;
+            margin-bottom: 10px;
+        }
+        p {
+            font-size: 1.1em;
+            margin-bottom: 30px;
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+            max-width: 400px;
+            margin: 0 auto 30px auto;
+            text-align: left;
+        }
+        li {
+            background: white;
+            margin: 8px 0;
+            padding: 12px 16px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            transition: transform 0.2s;
+        }
+        li:hover {
+            transform: scale(1.02);
+        }
+        a {
+            color: #0066cc;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        .map-container {
+            max-width: 800px;
+            margin: 0 auto;
+            border-radius: 12px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+            overflow: hidden;
+        }
+        iframe {
+            width: 100%;
+            height: 480px;
+            border: 0;
+        }
+        @media (max-width: 600px) {
+            body {
+                padding: 20px 10px;
+            }
+            ul {
+                max-width: 100%;
+            }
+            .map-container {
+                max-width: 100%;
+                height: 300px;
+            }
+            iframe {
+                height: 300px;
+            }
         }
     </style>
 </head>
 <body>
     <h1>Top Rope Solo 🌍</h1>
-    <p>Place around Tromso, Norway to Top Rope Solo</p>
+    <p>Steder rundt Tromsø for Top Rope Solo:</p>
+    <ul>
+        <li><a href="https://goo.gl/maps/2fLVaEb1m4fGvJAm8" target="_blank" rel="noopener">Kvaløya – Ersfjord</a></li>
+        <li><a href="https://goo.gl/maps/3VtXqLPjvQyAWhys5" target="_blank" rel="noopener">Tromsdalen – Fjellheisen</a></li>
+        <li><a href="https://goo.gl/maps/Nu9mkhFpCGqS6uTA6" target="_blank" rel="noopener">Prestvannet – Lokale småklipper</a></li>
+    </ul>
+
+    <div class="map-container">
+        <iframe 
+            src="https://www.google.com/maps/d/embed?mid=13oGJHV-1b5Tq7Y4jk8EXi-ji3IjMY48&ehbc=2E312F" 
+            allowfullscreen 
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+    </div>
 </body>
 </html>
