--- a/index2.html
+++ b/index2.html
@@ -7,98 +7,41 @@
 <link
   rel="stylesheet"
   href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-  integrity="sha256-sA+oM9M+dHJnkkXnSgTa+RG9x+X8kU2z5f6wQf6rmC4="
   crossorigin=""
 />
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f4f8;
-    color: #333;
-    text-align: center;
-    padding: 40px 20px;
+  /* Viktig at #map har høyde for å vises */
+  html, body {
+    height: 100%;
     margin: 0;
-  }
-  h1 {
-    color: #0066cc;
-    margin-bottom: 10px;
+    padding: 0;
   }
   #map {
-    height: 480px;
-    max-width: 800px;
-    margin: 0 auto;
-    border-radius: 12px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
-  }
-  ul {
-    list-style: none;
-    padding: 0;
-    max-width: 400px;
-    margin: 0 auto 30px auto;
-    text-align: left;
-  }
-  li {
-    background: white;
-    margin: 8px 0;
-    padding: 12px 16px;
-    border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    cursor: pointer;
-  }
-  li:hover {
-    background-color: #e6f0ff;
-  }
-  @media (max-width: 600px) {
-    body {
-      padding: 20px 10px;
-    }
-    #map {
-      height: 300px;
-      max-width: 100%;
-    }
-    ul {
-      max-width: 100%;
-    }
+    height: 100vh; /* Full høyde i viewport */
+    width: 100%;
   }
 </style>
 </head>
 <body>
-  <h1>Top Rope Solo 🌍</h1>
-  <p>Steder rundt Tromsø for Top Rope Solo:</p>
-  <ul id="places-list">
-    <li data-lat="69.69472" data-lng="18.63642">Korteidet</li>
-    <li data-lat="69.78386" data-lng="18.78913">Lyfjorddalen</li>
-  </ul>
   <div id="map"></div>
 
-  <script
-    src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-    integrity="sha256-o9N1jzH1kyGqLs6JEt39bDBLmEWxz5ZT1q2Fb59xjkM="
-    crossorigin=""
-  ></script>
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
   <script>
+    // Initialiser kartet sentrert i Tromsø-området
     const map = L.map('map').setView([69.74, 18.71], 12);
 
+    // Legg til OpenStreetMap fliser
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19,
       attribution:
         '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     }).addTo(map);
 
-    const places = document.querySelectorAll('#places-list li');
+    // Marker Korteidet
+    L.marker([69.69472, 18.63642]).addTo(map).bindPopup('Korteidet');
 
-    places.forEach((place) => {
-      const lat = place.dataset.lat;
-      const lng = place.dataset.lng;
-
-      const marker = L.marker([lat, lng]).addTo(map);
-      marker.bindPopup(place.textContent);
-
-      place.addEventListener('click', () => {
-        map.setView([lat, lng], 15);
-        marker.openPopup();
-      });
-    });
+    // Marker Lyfjorddalen
+    L.marker([69.78386, 18.78913]).addTo(map).bindPopup('Lyfjorddalen');
   </script>
 </body>
 </html>
