--- a/index2.html
+++ b/index2.html
@@ -10,38 +10,97 @@
   crossorigin=""
 />
 <style>
-  /* Viktig at #map har høyde for å vises */
-  html, body {
-    height: 100%;
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f4f8;
+    color: #333;
+    text-align: center;
+    padding: 20px;
     margin: 0;
-    padding: 0;
+  }
+  h1 {
+    color: #0066cc;
+    margin-bottom: 10px;
+  }
+  #buttons {
+    margin-bottom: 15px;
+  }
+  button {
+    background-color: #0066cc;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    padding: 10px 18px;
+    margin: 0 8px 8px 0;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+  }
+  button:hover {
+    background-color: #004a99;
   }
   #map {
-    height: 100vh; /* Full høyde i viewport */
-    width: 100%;
+    height: 500px;
+    width: 80vw;
+    max-width: 800px;
+    margin: 0 auto;
+    border-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  }
+  @media (max-width: 600px) {
+    #map {
+      width: 95vw;
+      height: 350px;
+    }
+    button {
+      font-size: 14px;
+      padding: 8px 14px;
+    }
   }
 </style>
 </head>
 <body>
+  <h1>Top Rope Solo 🌍</h1>
+  <div id="buttons">
+    <button data-lat="69.69472" data-lng="18.63642">Korteidet</button>
+    <button data-lat="69.78386" data-lng="18.78913">Lyfjorddalen</button>
+  </div>
   <div id="map"></div>
 
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
   <script>
-    // Initialiser kartet sentrert i Tromsø-området
     const map = L.map('map').setView([69.74, 18.71], 12);
 
-    // Legg til OpenStreetMap fliser
     L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
       maxZoom: 19,
       attribution:
         '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     }).addTo(map);
 
-    // Marker Korteidet
-    L.marker([69.69472, 18.63642]).addTo(map).bindPopup('Korteidet');
+    const locations = [
+      { name: 'Korteidet', lat: 69.69472, lng: 18.63642 },
+      { name: 'Lyfjorddalen', lat: 69.78386, lng: 18.78913 }
+    ];
 
-    // Marker Lyfjorddalen
-    L.marker([69.78386, 18.78913]).addTo(map).bindPopup('Lyfjorddalen');
+    const markers = {};
+
+    locations.forEach(({name, lat, lng}) => {
+      const popupContent = `<strong>${name}</strong><br>Her kommer det mer informasjon`;
+      const marker = L.marker([lat, lng]).addTo(map).bindPopup(popupContent);
+      markers[name] = marker;
+    });
+
+    const buttons = document.querySelectorAll('#buttons button');
+    buttons.forEach(button => {
+      button.addEventListener('click', () => {
+        const lat = button.getAttribute('data-lat');
+        const lng = button.getAttribute('data-lng');
+        const name = button.textContent;
+
+        map.setView([lat, lng], 15);
+        markers[name].openPopup();
+      });
+    });
   </script>
 </body>
 </html>
