--- a/index.html
+++ b/index.html
@@ -83,170 +83,8 @@
       color: #555;
       margin-bottom: 20px;
     }
-    /* Pop-up styles */
-    #popup {
-      display: none;
-      position: fixed;
-      top: 0; left: 0; right:0; bottom:0;
-      background: rgba(0,0,0,0.8);
-      justify-content: center;
-      align-items: center;
-      z-index: 1000;
+    #instagramReelContainer {
+      max-width: 540px;
+      margin: 0 auto 20px;
     }
-    #popupContent {
-      background: white;
-      border-radius: 8px;
-      max-width: 90vw;
-      max-height: 90vh;
-      overflow-y: auto;
-      padding: 20px;
-      position: relative;
-      box-sizing: border-box;
-    }
-    #popupClose {
-      position: absolute;
-      top: 10px;
-      right: 14px;
-      font-size: 28px;
-      border: none;
-      background: none;
-      cursor: pointer;
-      color: #333;
-      font-weight: bold;
-    }
-  </style>
-
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/ol@latest/ol.css"
-  />
-  <script src="https://cdn.jsdelivr.net/npm/ol@latest/ol.js"></script>
-</head>
-<body>
-  <h1>Top Rope Solo - Tromsø 🌍</h1>
-  <div id="description">
-    On this page, you will find information about places around Tromsø where Top Rope Solo is possible. The page will be updated continuously.
-  </div>
-
-  <div id="buttons">
-    <button id="btnOverview">Map overview</button>
-    <button id="btnKorteidet">Korteidet</button>
-    <button id="btnLyfjorddalen">Lyfjorddalen</button>
-  </div>
-
-  <div id="map"></div>
-
-  <div id="instagramSection">
-    <a
-      id="instagramBtn"
-      href="https://www.instagram.com/rope.solo.man/"
-      target="_blank"
-      rel="noopener noreferrer"
-    >
-      <svg
-        role="img"
-        viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg"
-        aria-labelledby="instaIconTitle"
-        >
-        <title id="instaIconTitle">Instagram icon</title>
-        <path
-          d="M7.75 2A5.75 5.75 0 002 7.75v8.5A5.75 5.75 0 007.75 22h8.5A5.75 5.75 0 0022 16.25v-8.5A5.75 5.75 0 0016.25 2h-8.5zm0 1.5h8.5A4.25 4.25 0 0120.5 7.75v8.5a4.25 4.25 0 01-4.25 4.25h-8.5A4.25 4.25 0 013 16.25v-8.5A4.25 4.25 0 017.75 3.5zm4.25 3a4.5 4.5 0 100 9 4.5 4.5 0 000-9zm0 1.5a3 3 0 110 6 3 3 0 010-6zm4.75-.75a1.125 1.125 0 11-2.25 0 1.125 1.125 0 012.25 0z"
-        />
-      </svg>
-      Rope Solo Man
-    </a>
-    <div id="instagramText">
-      You can see pictures and videos from Top Rope Solo on this profile
-    </div>
-  </div>
-
-  <!-- Pop-up for markers -->
-  <div id="popup">
-    <div id="popupContent">
-      <button id="popupClose">&times;</button>
-      <div id="popupText"></div>
-    </div>
-  </div>
-
-  <script async src="//www.instagram.com/embed.js"></script>
-  <script>
-    // Initialize the map
-    const map = new ol.Map({
-      target: 'map',
-      layers: [
-        new ol.layer.Tile({
-          source: new ol.source.OSM(), // OpenStreetMap base layer
-        }),
-      ],
-      view: new ol.View({
-        center: ol.proj.fromLonLat([18.7, 69.74]),
-        zoom: 11,
-      }),
-    });
-
-    // Marker style
-    const markerStyle = new ol.style.Style({
-      image: new ol.style.Icon({
-        anchor: [0.5, 1],
-        src:
-          'https://upload.wikimedia.org/wikipedia/commons/e/ec/RedDot.svg',
-        scale: 1,
-      }),
-    });
-
-    // Marker features
-    const korteidetFeature = new ol.Feature({
-      geometry: new ol.geom.Point(
-        ol.proj.fromLonLat([18.63642, 69.69472])
-      ),
-      name: 'Korteidet',
-    });
-
-    const lyfjorddalenFeature = new ol.Feature({
-      geometry: new ol.geom.Point(
-        ol.proj.fromLonLat([18.78913, 69.78386])
-      ),
-      name: 'Lyfjorddalen',
-    });
-
-    korteidetFeature.setStyle(markerStyle);
-    lyfjorddalenFeature.setStyle(markerStyle);
-
-    // Vector source and layer
-    const vectorSource = new ol.source.Vector({
-      features: [korteidetFeature, lyfjorddalenFeature],
-    });
-
-    const vectorLayer = new ol.layer.Vector({
-      source: vectorSource,
-    });
-
-    map.addLayer(vectorLayer);
-
-    // Popup elements
-    const popup = document.getElementById('popup');
-    const popupContent = document.getElementById('popupText');
-    const popupCloseBtn = document.getElementById('popupClose');
-
-    // Content for pop-ups
-    const popupInfo = {
-      Korteidet: `<h2>Korteidet</h2><p>Here comes more information.</p>`,
-      Lyfjorddalen: `<h2>Lyfjorddalen</h2>
-        <p>Here comes more information.</p>
-        <blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/reel/DL8NKszNihY/?utm_source=ig_embed&utm_campaign=loading" data-instgrm-version="14" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
-          <a href="https://www.instagram.com/reel/DL8NKszNihY/?utm_source=ig_embed&utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank"></a>
-        </blockquote>`,
-    };
-
-    // Function to show popup with content
-    function showPopup(content) {
-      popupContent.innerHTML = content;
-      popup.style.display = 'flex';
-      if (window.instgrm) {
-        window.instgrm.Embeds.process();
-      }
-    }
-
-    // Event listeners for buttons
-    document.getElementById('btnOverview').addEventListener('click
+    /* Pop-*
